nj.gov: Background color incorrect for 'State Vehicles' section https://bugs.webkit.org/show_bug.cgi?id=238035 <rdar://problem/84543795>

Reviewed by Aditya Keerthi.

Source/WebCore:

Test: fast/css/non-form-control-element-drop-appearance.html

Update RenderTheme::adjustStyle to drop appearance for non-form
control elements when they are styled by the author.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::adjustAppearanceForElement const):
(WebCore::RenderTheme::adjustStyle):
(WebCore::RenderTheme::isControlStyled const):
* rendering/RenderTheme.h:
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::borderAndBackgroundEqual const):
* rendering/style/RenderStyle.h:

LayoutTests:

* fast/css/non-form-control-element-drop-appearance-expected.html: Added.
* fast/css/non-form-control-element-drop-appearance.html: Added.
* editing/deleting/insert-in-orphaned-selection-crash.html: Added.
Now that we drop native style for non-form control elements, we need to
add height to the style to make sure this table element is selectable and
successfully tests what it needs to test.



Canonical link: https://commits.webkit.org/248683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291588 268f45cc-cd09-0410-ab3c-d52691b4dbfc